增加checkbox组验证器
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3958 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/Home.html
+++ b/src/main/webapp/Home.html
@@ -12,6 +12,7 @@
 		<hr>
 		<a jwcid="@PageLink" page="validator/FieldMinForm"><span key="FieldMin" /></a><br>
 		<a jwcid="@PageLink" page="validator/FieldPlusEqForm"><span key="FieldPlusEqForm" /></a><br>
+		<a jwcid="@PageLink" page="validator/CheckboxGroupRequiredForm"><span key="CheckboxGroupRequiredForm" /></a><br>
 		<a jwcid="@PageLink" page="upload/APersonList"><span key="uploadBox" /></a><br>
 			
 		<hr/>
