调整淡入淡出js
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3982 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/window/test_fade.html
+++ b/src/test/resources/corner/window/test_fade.html
@@ -16,7 +16,7 @@
 	<span id="winDialog">
 	<img name="pwin_winDialog_button" id="pwin_winDialog_button" src="../../../../main/js/corner/widget/templates/dic.gif" border="0" 
 	onmouseover="startObjVisible('test','show')" onmouseout="startObjVisible('test','hid')" /></span>
-	<div id="test" style="position:absolute;DISPLAY: none;">fjdskajfdksjl</div><br/>
+	<div id="test" style="position:absolute;DISPLAY: none;" onmouseover="keepState()" onmouseout="startObjVisible('test','hid')" onclick="run('aaa')">fjdskajfdksjl</div><br/>
 	<br>
 	<br>
 	<br>
@@ -29,6 +29,11 @@
 	<input id="test"/>
 	<input type="submit"/>
 </form>	
+<SCRIPT> 
+	function aaa(){
+		alert("11111111");
+	}
+</SCRIPT> 
 
 <br/>
 <span>Version:0.0.1  $Revision: 3761 $ $Date: 2007-12-03 18:11:19 +0800 $ </span>
