用prototype重构fade js代码
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3983 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/menu/test_DropdownMenu.html
+++ b/src/test/resources/corner/menu/test_DropdownMenu.html
@@ -81,7 +81,7 @@ djConfig = { isDebug: true
 <body>
 <table><tr><td id="menu1">menu1</td></tr></table>
 	<div id="menu1Div" class="popMenuDiv">
-	menu1 dive
+	menu1 dive sss
 	</div>
 <script type="text/javascript"><!--
 
