--- a/src/test/resources/corner/window/test_win.html
+++ b/src/test/resources/corner/window/test_win.html
@@ -95,8 +95,8 @@ dojo.require("tapestry.namespace")
 <script type="text/javascript" src="../../../../main/js/corner/prototype/window/javascripts/window.js"> </script>
 <script type="text/javascript" src="../../../../main/js/corner/prototype/window/javascripts/window_effects.js"> </script>
 <script type="text/javascript" src="../../../../main/js/corner/prototype/cornerBuilder.js"> </script>
-<script type="text/javascript" src="../../../../main/java/corner/orm/tapestry/component/prototype/window/WindowQueryDialog.js"> </script>
 <script type="text/javascript" src="../../../../main/java/corner/orm/tapestry/component/prototype/window/fade.js"> </script>
+<script type="text/javascript" src="../../../../main/java/corner/orm/tapestry/component/prototype/window/WindowQueryDialog.js"> </script>
 
 
 <form method="post" action="/widget/QueryDialogTest,AForm.direct" id="AForm">
@@ -147,13 +147,7 @@ function aaa(){
 									   "resizable":"true","closable":"true","minimizable":"true","maximizable":"true",
 									   "draggable":"true","showEffectOptions":"none","hideEffectOptions":"none","effectOptions":"none",
 									   "opacity":1,"recenterAuto":"true","gridX":1,"gridY":1,"wiredDrag":"false",
-									   "destroyOnClose":"false","all callbacks":"none"});
-	
-	dojo.event.connect(dojo.byId("pwin_winDialog_button"),"onmouseover",function(evt){Fade.elementOpen('test')});
-	dojo.event.connect(dojo.byId("pwin_winDialog_button"),"onmouseout",function(evt){Fade.elementClose('test')});
-	dojo.event.connect(dojo.byId("test"),"onmouseover",function(evt){Fade.keepState()});
-	dojo.event.connect(dojo.byId("test"),"onmouseout",function(evt){Fade.elementClose('test')});
-	dojo.event.connect(dojo.byId("test"),"onclick",function(evt){Fade.callFun('aaa')});
+									   "destroyOnClose":"false","all callbacks":"none"},"",true,"test","aaa");
 	
 // --></script></body>
 </html>
