完成windowDialog弹出功能
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3986 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/window/test_win.html
+++ b/src/test/resources/corner/window/test_win.html
@@ -102,34 +102,22 @@ dojo.require("tapestry.namespace")
 <form method="post" action="/widget/QueryDialogTest,AForm.direct" id="AForm">
 	<span id="winDialog">
 	<img name="pwin_winDialog_button" id="pwin_winDialog_button" src="../../../../main/js/corner/widget/templates/dic.gif" border="0" /></span>
-	<div id="test" class="popMenuDiv" style="display:none">fjdskajfdksjl</div><br/>
+	<div id="test" style="DISPLAY: none;FILTER: alpha(opacity=0); ">fjdskajfdksjl</div><br/>
 	<br>
-	<br>
-	<br>
-	<br>
-	<a onclick="dd.setObjOpen()">111111</a>
-	<a onclick="dd.setObjClose()">222222</a>
 	
-	<br>
-	<br>
-	<a onclick="startObjVisible('test','show')">33333</a>
-	<a onclick="startObjVisible('test','hid')">44444</a>
-	<a onclick="keep()">5555555</a>
-	
-	<input id="test"/>
+	<input id="test" />
 	<input type="submit"/>
 </form>	
 <script>
 <!--
-
-
 function selectRecord(obj){
 			dojo.byId('test').value=obj.getAttribute("label");
 }
 
 function aaa(){
-	alert("11111111");
+	alert("11111111111");
 }
+
 //-->
 </script>
 
