--- a/src/main/webapp/widget/QueryDialogTest.html
+++ b/src/main/webapp/widget/QueryDialogTest.html
@@ -1,10 +1,34 @@
 <span jwcid="@DemoBorder">
+<style>
+.popMenuDiv,#popMenuDiv{
+	position: absolute;
+	background-color: white;
+	border:1px solid black;
+	font: normal 12px Verdana;
+}
+
+
+#popMenuDiv  a,.popMenuDiv a{
+	font-size:12px;
+	text-decoration: none;
+	padding-left: 6px;
+	color: black;
+	display: block;
+}
+
+#popMenuDiv a:hover,.popMenuDiv a:hover{ 
+	background-color: #CCFF9D;
+}
+
+</style>
 <form jwcid="AForm">
 
 	<span jwcid="dialog2"></span>
-	
-	<span jwcid="winDialog"></span>
-	<a id="touch">touch me</a>
+	<br/><br/><br/><br/><br/><br/><br/>
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span jwcid="winDialog"></span>
+	<br/>
+	<a onclick="Fade.elementOpen('pwin_winDialog_div')">111111111</a><br/>
+	<a onclick="Fade.elementClose('pwin_winDialog_div')">2222222</a>
 	
 	<span jwcid="popText" />
 	<br/>
@@ -15,6 +39,10 @@
 <!--
 function selectRecord(obj){
 			dojo.byId('test').value=obj.value;
+}
+
+function callShowCleanFun(){
+	dojo.byId('test').value="111111111111111111111";
 }
 //-->
 </script>
