统一使用main/java下的gainpoint.js
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3999 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/gain/test_gainPoint.html
+++ b/src/test/resources/corner/gain/test_gainPoint.html
@@ -4,7 +4,7 @@
 <head>
 <title>test gainPoint</title>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
-	<SCRIPT LANGUAGE="JavaScript" src="GainPoint.js"></script>
+	<SCRIPT LANGUAGE="JavaScript" src="../../../../main/java/corner/orm/tapestry/component/gain/GainPoint.js"></script>
 <SCRIPT LANGUAGE="JavaScript">
 <!--
 
@@ -67,7 +67,7 @@ function reElementValues(){
       <table id="t">
 		<tr jwcid="GainPointIdField">
 			<td>
-				id<input type="hidden" id="id" name ="id" value="fjkdsajfldsu4o329048347832012j4kl48"	/>
+				id<input type="hidden" id="id" name ="poid" value="fjkdsajfldsu4o329048347832012j4kl48"	/>
 			</td>
 			<td>
 				field 1 <input id="field1" name="name" value="aaaaa" />
