--- a/src/test/resources/corner/gain/test_gainPoint.html
+++ b/src/test/resources/corner/gain/test_gainPoint.html
@@ -43,8 +43,6 @@ function reElementValues(){
 				 elements[i].value = flags[key][i];
 				}
 			
-				
-			
 				dojo.debug(flags[key][i]);
 			}
 	}
@@ -60,9 +58,8 @@ function reElementValues(){
 </head>
 
 <body>
-	
 <form id="BForm">
-	name <a href=# onclick="addRow('t')">add</a><br/>
+	name <a href=# onclick="addRow('t')"><img src="../../../../main/webapp/images/add.png" border="0"/></a><br/>
 	<a href=# onclick="addRows(4,'t')">adds</a><br/>
       <table id="t">
 		<tr jwcid="GainPointIdField">
@@ -76,8 +73,8 @@ function reElementValues(){
 				field 2 <input id="field1" name="cnName" value="bbbbbb" />
 			</td>
 			<td>
-				<input id="testAdd" value="删除" onclick="dellRow('t',getTrIndex(this))" type="button">
-			</td>							
+				<a href=# onclick="dellRow('t',getTrIndex(this))""><img src="../../../../main/webapp/images/cancel.png" border="0"/></a>
+			</td>
 		</tr>
 	</table>
 </form>
