--- a/src/test/resources/corner/gain/test_gainPoint.html
+++ b/src/test/resources/corner/gain/test_gainPoint.html
@@ -64,7 +64,7 @@ function reElementValues(){
       <table id="t">
 		<tr jwcid="GainPointIdField">
 			<td>
-				id<input type="hidden" id="id" name ="poid" value="fjkdsajfldsu4o329048347832012j4kl48"	/>
+				id<input type="hidden" id="poid" name ="poid" value="fjkdsajfldsu4o329048347832012j4kl48"	/>
 			</td>
 			<td>
 				field 1 <input id="field1" name="name" value="aaaaa" />
