--- a/src/test/resources/corner/gain/test_gainPoint.html
+++ b/src/test/resources/corner/gain/test_gainPoint.html
@@ -67,10 +67,10 @@ function reElementValues(){
 				id<input type="hidden" id="poid" name ="poid" value="fjkdsajfldsu4o329048347832012j4kl48"	/>
 			</td>
 			<td>
-				field 1 <input id="field1" name="name" value="aaaaa" />
+				field 1 <input id="field1" type="text" name="name" value="aaaaa" />
 			</td>
 			<td>
-				field 2 <input id="field1" name="cnName" value="bbbbbb" />
+				field 2 <input id="field1" type="text" name="cnName" value="bbbbbb" />
 			</td>
 			<td>
 				<a href=# onclick="dellRow('t',getTrIndex(this))""><img src="../../../../main/webapp/images/cancel.png" border="0"/></a>
