--- a/src/test/resources/corner/window/tree/tree.html
+++ b/src/test/resources/corner/window/tree/tree.html
@@ -27,7 +27,7 @@ djConfig = { isDebug: true,
 <script language="JavaScript" type="text/javascript" src="js/common.js"></script>
 <script language="JavaScript" type="text/javascript" src="js/commonajax.js"></script>
 
-<script language="JavaScript" type="text/javascript" src="lefttree.js"></script>
+<script language="JavaScript" type="text/javascript" src="../../../../../main/java/corner/orm/tapestry/component/tree/lefttree.js"></script>
 
 </HEAD>
 <body>
@@ -37,7 +37,7 @@ djConfig = { isDebug: true,
 
 <script type="text/javascript">
 <!--
-		new LeftTree("parent",null,"My Tree");
+		new LeftTree("parent","test.txt","My Tree");
 		enableAjaxDebug();
 //-->
 </script>
