--- a/src/test/resources/corner/window/tree/tree.html
+++ b/src/test/resources/corner/window/tree/tree.html
@@ -37,7 +37,7 @@ djConfig = { isDebug: true,
 
 <script type="text/javascript">
 <!--
-		new LeftTree("parent","test.txt","My Tree");
+		var tree = new LeftTree("parent","test.txt","My Tree");
 		enableAjaxDebug();
 //-->
 </script>
