--- a/src/test/resources/corner/window/tree/tree.html
+++ b/src/test/resources/corner/window/tree/tree.html
@@ -27,7 +27,7 @@ djConfig = { isDebug: true,
 <script language="JavaScript" type="text/javascript" src="js/common.js"></script>
 <script language="JavaScript" type="text/javascript" src="js/commonajax.js"></script>
 
-<script language="JavaScript" type="text/javascript" src="../../../../../main/java/corner/orm/tapestry/component/tree/lefttree.js"></script>
+<script language="JavaScript" type="text/javascript" src="../../../../../main/java/corner/orm/tapestry/component/tree/pop/poptree.js"></script>
 
 </HEAD>
 <body>
@@ -37,8 +37,7 @@ djConfig = { isDebug: true,
 
 <script type="text/javascript">
 <!--
-		var tree = new LeftTree("parent","test.txt","My Tree");
-		enableAjaxDebug();
+		var tree = new PopTree("parent","test.txt","My Tree");
 //-->
 </script>
 	</body>
