增加了确是的图片，修正了返回跳转的错误
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4028 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/palette/PaletteResults.html
+++ b/src/main/webapp/palette/PaletteResults.html
@@ -12,6 +12,6 @@ is significant.
 </span>
 
 <p>
-<a jwcid="@PageLink" page="Palette"><img jwcid="backRollover" alt="[Back]"/></a>
+<a jwcid="@PageLink" page="palette/Palette"><img jwcid="backRollover" alt="[Back]"/></a>
 
 </span>
