--- a/src/main/webapp/Home.html
+++ b/src/main/webapp/Home.html
@@ -26,5 +26,9 @@
 		<hr/>
 			Prototype
 		<a jwcid="@PageLink" page="prototype/AList"><span key="Prototype" /></a><br>
+		<hr/>
+			iframe
+		<a jwcid="@PageLink" page="iframe/iframe"><span key="iframe" /></a><br>
+		
     </body>
 </html>
