--- a/src/test/resources/corner/selectBox/test_select.html
+++ b/src/test/resources/corner/selectBox/test_select.html
@@ -32,7 +32,7 @@ dojo.require("tapestry.namespace")
 </HEAD>
 
 <body bottommargin="0" rightmargin="0" topmargin="0" leftmargin="0" id="Body">
-<form onSubmit="allSelect()">
+<form id="Aform">
 <table border="0"> 
 	
               <tr>
@@ -67,7 +67,7 @@ dojo.require("tapestry.namespace")
 <br/>
 <span>Version:0.0.1  $Revision: 3996 $ $Date: 2008-03-18 16:54:31 +0800 $ </span>
 <script type="text/javascript"><!--
-	var sel = new SelectBox('possible','chosen');
+	var sel = new SelectBox('Aform','possible','chosen');
 // --></script></body>
 </html>
 <!-- Render time: ~ 922 ms -->
