--- a/src/main/webapp/palette/PaletteResults.html
+++ b/src/main/webapp/palette/PaletteResults.html
@@ -13,5 +13,7 @@ is significant.
 
 <p>
 <a jwcid="@PageLink" page="palette/Palette"><img jwcid="backRollover" alt="[Back]"/></a>
+<br/>
+<span jwcid="@Insert" value="ognl:currentTime" format="ognl:@corner.demo.page.palette.Palette@TIME_PATTERN"/>
 
 </span>
