修改pageTree，可以传递实体到页面
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4048 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/window/tree/lTree.html
+++ b/src/test/resources/corner/window/tree/lTree.html
@@ -37,7 +37,7 @@ djConfig = { isDebug: true,
 
 <script type="text/javascript">
 <!--
-		var tree = new PageTree("parent","testPage.txt","My Tree","mainFrame","com.bbb","ffff.page","prx");
+		var tree = new PageTree("parent","testPage.txt","My Tree","mainFrame","com.bbb","trunValue.html","");
 		enableAjaxDebug();
 //-->
 </script>
