--- a/src/test/resources/corner/window/tree/frameMainTree.html
+++ b/src/test/resources/corner/window/tree/frameMainTree.html
@@ -37,7 +37,7 @@ djConfig = { isDebug: true,
 
 <script type="text/javascript">
 <!--
-		var tree = new PageTree("parent","testPage.txt","My Tree","mainFrame","com.bbb","frameMain.html","");
+		var tree = new PageTree("parent","testPage.txt","My Tree","mainFrame","com.bbb","trunValue.html","");
 		enableAjaxDebug();
 //-->
 </script>
