--- a/src/test/resources/corner/window/tree/deptPopTree.html
+++ b/src/test/resources/corner/window/tree/deptPopTree.html
@@ -77,7 +77,7 @@ function selectRecordShow(obj){
 <script type="text/javascript"><!--
 
 new LeftTreeDialog("pwin_winDialog_button",{"id":"generated","className":"alphacube","title":"google",
-									   "url":"deptTree.html","top ":"top:0","right":"left:0","width":"500","height":"300",
+									   "url":"tree.html","top ":"top:0","right":"left:0","width":"500","height":"300",
 									   "maxWidth":"none","maxHeight":"none","minWidth ":"500","minHeight":"300",
 									   "resizable":"true","closable":"true","minimizable":"true","maximizable":"true",
 									   "draggable":"true","showEffectOptions":"none","hideEffectOptions":"none","effectOptions":"none",
