去掉了cornerInsert组件中的id，这个貌似从来没用到过
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4077 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/tools/CornerInsert.htm
+++ b/tools/CornerInsert.htm
@@ -26,7 +26,7 @@ function objectTag() {
 			cssTag = 'input-form';
 		}
 
-		return ("<input type=\"text\" name=\""+insertTag+"\" id=\""+insertTag+"Field\" jwcid=\""+insertTag+"Field\" class=\""+cssTag+"\"/>");
+		return ("<input type=\"text\" name=\""+insertTag+"\" jwcid=\""+insertTag+"Field\" class=\""+cssTag+"\"/>");
 
 	}
 
