升级了CornerSpan版本
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4080 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/tools/CornerSpan.htm
+++ b/tools/CornerSpan.htm
@@ -49,7 +49,7 @@
 		}
 		
 		//手动实现再选中的文本外围增加span标签
-		dom.source.wrapSelection("<span id=\""+idInsTag+"Field\" jwcid=\"@Insert\" value=\"ognl:"+objectName+"."+valTag+"\">","</span>");
+		dom.source.wrapSelection("<span jwcid=\"@Insert\" value=\"ognl:"+objectName+"."+valTag+"\">","</span>");
 		return;        
 		
 
