--- a/tools/CornerSpan.htm
+++ b/tools/CornerSpan.htm
@@ -41,15 +41,21 @@
 		var idInsTag = insertTag.charAt(0).toUpperCase()+insertTag.substring(1,insertTag.length);
 		var valTag = insertTag.charAt(0).toLowerCase()+insertTag.substring(1,insertTag.length);
 		
-		if (document.insertTagform.objectName.value != ""){
-			objectName=document.insertTagform.objectName.value;
+		//实体名称录入框的值
+		var inputObjectName = document.insertTagform.objectName.value;
+		if (inputObjectName != ""){
+			objectName=inputObjectName;
 		}
 		else {
 			objectName='entity'; 
 		}
 		
 		//手动实现再选中的文本外围增加span标签
-		dom.source.wrapSelection("<span jwcid=\"@Insert\" value=\"ognl:"+objectName+"."+valTag+"\">","</span>");
+		if(valTag.indexOf("get")>-1){
+			dom.source.wrapSelection("<span jwcid=\"@Insert\" value=\"ognl:"+valTag+"("+inputObjectName+")\">","</span>");//如果输入get方法
+		} else {
+			dom.source.wrapSelection("<span jwcid=\"@Insert\" value=\"ognl:"+objectName+"."+valTag+"\">","</span>");//如果是属性
+		}
 		return;        
 		
 
