--- a/src/test/resources/corner/widget/test_Matrix.html
+++ b/src/test/resources/corner/widget/test_Matrix.html
@@ -25,7 +25,7 @@ djConfig = { isDebug: true,
 dojo.require("corner.widget.Matrix");
 
 dojo.addOnLoad(function(){
-		dojo.widget.createWidget("Matrix",{},dojo.byId("testMatrix"));
+		dojo.widget.createWidget("corner:Matrix",{},dojo.byId("testMatrix"));
 	});
 
 //-->
