更新了dw插件
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4086 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/tools/CornerInsert.htm
+++ b/tools/CornerInsert.htm
@@ -1,9 +1,11 @@
 <!DOCTYPE HTML SYSTEM "-//Macromedia//DWExtension layout-engine 5.0//dialog">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
 <title>Corner Insert</title>
-
+<script type="text/javascript" SRC="../../Shared/Common/Scripts/dwscripts.js"></script>
+<!-- Remove the following SCRIPT tag if you are modifying this file for your own use. -->
+<script language="javascript" src="../../Shared/MM/Scripts/CMN/displayHelp.js"></script>
 </head>
 <script language="JavaScript">
 	function isDOMRequired() { 
