增加了piano中对日期的绑定前缀date:
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4093 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/palette/Palette.html
+++ b/src/main/webapp/palette/Palette.html
@@ -10,6 +10,9 @@
 		<td><input jwcid="update"/>
 			<input jwcid="continue"/></td>
 	</tr>
+	<tr>
+		<td><input type="text" jwcid="regDateField" value="regDate"/></td>
+	</tr>
 </table>
 
 </form>
