--- a/src/main/webapp/palette/PaletteResults.html
+++ b/src/main/webapp/palette/PaletteResults.html
@@ -15,5 +15,6 @@ is significant.
 <a jwcid="@PageLink" page="palette/Palette"><img jwcid="backRollover" alt="[Back]"/></a>
 <br/>
 <span jwcid="@Insert" value="ognl:currentTime" format="ognl:@corner.demo.page.palette.Palette@TIME_PATTERN"/>
-
+<br/>
+regDate:<span jwcid="@Insert" value="ognl:regDate" format="date:date"/>
 </span>
