升级了CornerInsert插件，提供自动带入日期format的功能
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4094 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/tools/CornerI18N.htm
+++ b/tools/CornerI18N.htm
@@ -44,7 +44,7 @@
    </tr>
  </table>
  <hr>
-<p align="center">bjmaxinfo'Ghostbb</p>
+<p align="left"><font color="#0080FF" size="+1" face="Comic Sans MS">bjmaxinfo'Ghostbb</font></p>
 </form>
 </body>
 </html>
