--- a/tools/CornerTextField.htm
+++ b/tools/CornerTextField.htm
@@ -95,7 +95,7 @@ function objectTag() {
     </tr>
   </table>
   <hr>
-  bjmaxinfo'Ghostbb
+<p align="left"><font color="#0080FF" size="+1" face="Comic Sans MS">bjmaxinfo'Ghostbb</font></p>
 </form>
 </body>
 </html>
