修正了CornerInsert组件中，生成get方法，并指定了参数的时候，自动带单引号的问题，目前去掉了单引号
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4097 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/tools/CornerInsert.htm
+++ b/tools/CornerInsert.htm
@@ -84,7 +84,7 @@
 			suffixStr = tmp + suffixStr;
 		}
 		if(valTag.indexOf("get")>-1){
-			dom.source.wrapSelection(perfixStr+valTag+"('"+inputObjectName+"')\""+suffixStr,"</span>");//如果输入get方法
+			dom.source.wrapSelection(perfixStr+valTag+"("+inputObjectName+")\""+suffixStr,"</span>");//如果输入get方法
 		} else {
 			dom.source.wrapSelection(perfixStr+objectName+"."+valTag+"\""+suffixStr,"</span>");//如果是属性
 		}
